ENT-1861: Port OwnerDTO to openapi spec
