# server/src/main/java/org/candlepin/dto/api/v1/ConsumerDTO.java
@@ -72,7 +72,7 @@ public class ConsumerDTO extends TimestampedCandlepinDTO<ConsumerDTO> implements
     protected Set<String> addOns;
     protected String systemPurposeStatus;
     protected String releaseVer;
-    protected OwnerDTO owner;
+    protected NestedOwnerDTO owner;
     protected EnvironmentDTO environment;
     protected Long entitlementCount;
     protected Map<String, String> facts;
@@ -385,7 +385,7 @@ public class ConsumerDTO extends TimestampedCandlepinDTO<ConsumerDTO> implements
      *
      * @return the owner of the consumer, or null if it has not yet been defined
      */
-    public OwnerDTO getOwner() {
+    public NestedOwnerDTO getOwner() {
         return this.owner;
     }
 
@@ -396,7 +396,7 @@ public class ConsumerDTO extends TimestampedCandlepinDTO<ConsumerDTO> implements
      *
      * @return a reference to this DTO object.
      */
-    public ConsumerDTO setOwner(OwnerDTO owner) {
+    public ConsumerDTO setOwner(NestedOwnerDTO owner) {
         this.owner = owner;
         return this;
     }
@@ -1083,8 +1083,12 @@ public class ConsumerDTO extends TimestampedCandlepinDTO<ConsumerDTO> implements
     public ConsumerDTO clone() {
         ConsumerDTO copy = super.clone();
 
-        OwnerDTO owner = this.getOwner();
-        copy.setOwner(owner != null ? owner.clone() : null);
+        NestedOwnerDTO owner = this.getOwner();
+        copy.setOwner(owner != null ? new NestedOwnerDTO()
+            .id(owner.getId())
+            .displayName(owner.getDisplayName())
+            .href(owner.getHref())
+            .key(owner.getKey()) : null);
 
         EnvironmentDTO environment = this.getEnvironment();
         copy.setEnvironment(environment != null ? environment.clone() : null);
